# generalized_rashomon_set

./: Crime.ipynb  Fridman.ipynb  README.md  logistic.ipynb  pyproject.toml  requirements.txt  test.ipynb  utilities.py
.ipynb_checkpoints/: Crime-checkpoint.ipynb  Fridman-checkpoint.ipynb  test-checkpoint.ipynb
demo/: toy _example.ipynb  tutorial.ipynb
experiments/: Crime.ipynb  fis_extension_nid.ipynb  image_classification_dog_cat_interaction.ipynb  recidivism prediction.ipynb  recidivism_analysis.ipynb  synthetic_performance_comparison.ipynb
generalized_rashomon_set.egg-info/: PKG-INFO  SOURCES.txt
grs/: __init__.py  config.py
results/: FIS-in-Rashomon-set-20230609-142844.json  FIS-in-Rashomon-set-20230609-194203.json  FIS-in-Rashomon-set-20230609-195724.json  FIS-in-Rashomon-set-20230611-131534.json  FIS-in-Rashomon-set-20230612-114421.json  FIS-in-Rashomon-set-20230612-121807.json  FIS-in-Rashomon-set-20230612-130623.json  FIS-in-Rashomon-set-20230612-131420.json  FIS-in-Rashomon-set-20230612-141541.json  FIS-in-Rashomon-set-20231113-091157-log_loss-0.05-0.004402799915968412-log_loss.json  FIS-joint-effect-raw-20230612-114421.json  FIS-joint-effect-raw-20230612-121807.json  FIS-joint-effect-raw-20230612-130623.json  FIS-joint-effect-raw-20230612-131420.json  FIS-joint-effect-raw-20230612-141541.json  FIS-joint-effect-raw-20231113-091157-log_loss-0.05.json  FIS-main-effect-processed-20231113-091157-log_loss-0.05.json  FIS-main-effect-raw-20230612-114421.json  FIS-main-effect-raw-20230612-121807.json  FIS-main-effect-raw-20230612-130623.json  (+10 more)
src/: Demo.ipynb  (+7 more)
(+105 files in other folders)
