[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "generalized_rashomon_set"
version = "0.0.15"
authors = [
  { name="Sichao", email="sichao.li@anu.edu.au" },
]
description = "Test version of Generalized Rashomon set"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://sichao-li.github.io/"